--- a/index.css
+++ b/index.css
@@ -1,23 +1,115 @@
-#header {
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    padding: 0;
 }
-.logo {
-    margin-left: auto;
+.logo{
+    align-items: center;
+
 }
 
-nav ul{
+.logo h1{
+    margin: left;
+}
+
+.logo ul{
     display: flex;
     justify-content: center;
     clear: both;
+    list-style-type: none;
+    padding: 0px;
+    margin: 0;
+    font-size: 18px;
+    
 }
 
-.introtext{
-    margin-left: 0%;
-    padding: 30px;
+.logo ul li a{
+    margin: 0 20px;
+    padding-right: 100px;
 }
-.renta{
-    
+
+.highlight {
+    background-color: #f16907;
+    color: black;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 24px;
+    margin: auto;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+
+.coverimage{
+    display: block;
+    float: right;
+    margin-top: -300px;
+
+}
+.introtext{
+    font-size: 20px;
+}
+.introtext p{
+    font-size: 20px;
+}
+.containerone{
+    padding-left: 150px;
+    padding-right: 350px;
+    padding-bottom: 200px;
+    padding-top: 50px;
+}
+.containerone img a{
+    height: 100px;
+    width: 50px;
+}
+.buy{
+    background-color: #f16907;
+    color: black;
+    padding: 5px 3px;
+    border-radius: 10px;
+    font-size: 23px;
+    padding-right: 10px;
+}
+
+.rent{
+    border-radius: 5px;
+    color: #f16907;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 2px 10px;
+    font-size: 20px;
+}
+
+.clear{
+    padding-top: 30px;
+}
+
+.containertwo{
+    padding-left: 150px;
+    font-size: 15px;
+}
+
+.top{
+    font-size: 18px;
+}
+
+
+.topratedcars{
+    font-size:18px;
+    justify-content:space-between;
+    padding-left: 10px;
+}
+
+.topratedcars img{
+    height: 30px;
+}
+
+.carbook{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;  
+}
+.models img{
+    box-shadow: 5px 5px 5px;
 }
