changed css colors

--- a/index.css
+++ b/index.css
@@ -169,7 +169,7 @@ h7{
     height: 100px;
     margin-bottom: 70px;
     margin-left: 20px;
-    background-color: antiquewhite;
+    background-color: pink;
 }
 
  .play{
@@ -177,7 +177,7 @@ width: 100px;
 height:50px;
 margin-bottom: 100px;
 margin-left: 20px;
-background-color: antiquewhite;
+background-color: pink;
  }
  .rental{
     width: 150px;
