--- a/index.css
+++ b/index.css
@@ -169,7 +169,7 @@ h7{
     height: 100px;
     margin-bottom: 70px;
     margin-left: 20px;
-    background-color: pink;
+    background-color: ;
 }
 
  .play{
